# qt-sample-db-viewer

./: CMakeLists.txt  CodeCoverage.cmake  LICENSE  README.md  default.nix  flake.nix  init_db.sql  populate_db.sql
include/: database.h  extendedtablemodel.h  ipstack.h  utils.h
qml/: Main.qml
qml/UI/: Menu.qml  Table.qml
qml/UI/Menu/: ConnectionMenu.qml  IpStackMenu.qml  RecordMenu.qml
src/: database.cpp  extendedtablemodel.cpp  ipstack.cpp  main.cpp  utils.cpp
tests/: tst_ipstack.cpp  tst_utils.cpp
